# cosyr

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  LICENSE.txt  README.md  test.sh
.github/workflows/: main.yml
analysis/: 1D_beam_field.ipynb  1D_beam_gradient.ipynb  2D_beam_field-g100.ipynb  CosyrAnalyze.py  plot.ipynb  real_beam.ipynb  reference_field.csv  test_wavelet.ipynb
docker/: Dockerfile  README.md
docs/: BUILD.md  HDF5.md
include/: analysis.h  beam.h  cosyr.h  exprtk.hpp  formula.h  input.h  io.h  kernel.h  mesh.h  pusher.h  remap.h  timer.h  wavelet.h
input/: check_inputdeck.ipynb  misc.py  test_beam_g100_l200.py  test_beam_g100_l200_sub_10000x100.py  test_beam_g100_l200_sub_3000x50.py  test_beam_g10_l200.py  test_beam_g10_l3000.py  test_beam_remap.py  test_beam_remap_adap_grad.py  test_mpi_beams.py  test_performance_kernel.py  test_performance_remap.py  test_remap_eval.py  test_restart.py  test_subcycle_wavelets.py  utils.py
input/wavelets/analytic_test/: waveletsAdapativeLeft.csv
input/wavelets/g10-200x200um-sub/: EsRad_sub.csv  scaled_xprime_sub.csv  scaled_yprime_sub.csv
input/wavelets/g100-200x200um-sub/: EBRad_sub.csv  scaled_xprime_sub.csv  scaled_yprime_sub.csv
scripts/: build  build_cori.sh  build_hpc.sh  build_mac.sh  convert_wavelet.py  job.cori.knl.360.sh  run_cosyr.sh
scripts/plots/: meshfield.py  plot_field.py  plot_mesh.py  plot_meshfield.py  plot_meshfield_rad_ang.py  plot_wavefronts.py
scripts/scaling/: mpi_scaling_knl.sh  thread_scaling.gnu  thread_scaling.sh
src/: analysis.cpp  beam.cpp  formula.cpp  input.cpp  io.cpp  kernel.cpp  main.cpp  mesh.cpp  pusher.cpp  remap.cpp  wavelet.cpp
